Enhance Tech Stack and Data Metrics Sections
- Refactored TechStack component to include proficiency levels and categories for skills.
- Improved animations and hover effects for skill items in TechStack.
- Added DataMetrics component to showcase key data achievements with animations.
- Introduced DataStories component to present detailed case studies with insights and methodologies.
- Updated CSS styles for TechStack, DataMetrics, and DataStories for better responsiveness and visual appeal.
- Implemented mobile performance optimizations in Global.css.
- Enhanced visual elements with gradient backgrounds and hover effects across components.

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#060a17" />
-  <meta name="description" content="Jessica Adzoyi – Portfolio, Projects, and Experience in Data Analytics and Tech." />
-  <meta name="keywords" content="Jessica Adzoyi, Data Analytics, Portfolio, Projects, Tech, Python, SQL, Tableau" />
+  <meta name="description"
+    content="Jessica Adzoyi – Professional Data Scientist & Analytics Expert. Transforming complex data into strategic business insights through SQL, Python, and advanced statistical modeling." />
+  <meta name="keywords"
+    content="Jessica Adzoyi, Data Scientist, Business Analytics, SQL, Python, Tableau, Statistical Modeling, Data Engineering, Business Intelligence" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,13 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=NTR&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
 
-  <meta property="og:title" content="Jessica Adzoyi" />
+  <meta property="og:title" content="Jessica Adzoyi - Data Scientist & Analytics Professional" />
   <meta property="og:description"
-    content="Hi, I'm Jessica, I analyze data and create insightful visualizations. I also build stuff for fun sometimes." />
+    content="Professional Data Scientist specializing in business intelligence, statistical modeling, and strategic data analysis. Proven track record delivering actionable insights that drive business growth." />
   <meta property="og:image" content="https://jessica-adzoyi.com/share-img.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Jessica Adzoyi - Data Analyst Portfolio" />
+  <meta property="og:image:alt" content="Jessica Adzoyi - Professional Data Scientist Portfolio" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jessica-adzoyi.com/" />
 
@@ -33,7 +35,7 @@
     gtag('js', new Date());
     gtag('config', 'G-E1XPQY97P2');
   </script>
-  <title>Jessica Adzoyi</title>
+  <title>Jessica Adzoyi - Data Scientist & Analytics Professional</title>
 
 </head>
 
