Update hosting domain and enhance portfolio content for clarity and relevance

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#060a17" />
   <meta name="description"
-    content="Jessica Adzoyi – Professional Data Scientist & Analytics Expert. Transforming complex data into strategic business insights through SQL, Python, and advanced statistical modeling." />
+    content="Jessica Adzoyi – Aspiring Data Scientist & Current Analytics Intern. On a learning journey from Biochemistry to Data Science, currently studying at WorldQuant University and building skills in Python and Excel." />
   <meta name="keywords"
-    content="Jessica Adzoyi, Data Scientist, Business Analytics, SQL, Python, Tableau, Statistical Modeling, Data Engineering, Business Intelligence" />
+    content="Jessica Adzoyi, Aspiring Data Scientist, Data Analytics Intern, WorldQuant University, DataCamp, Learning Data Science, Python Beginner, Excel, Career Change" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,15 +18,15 @@
   <link href="https://fonts.googleapis.com/css2?family=NTR&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
 
-  <meta property="og:title" content="Jessica Adzoyi - Data Scientist & Analytics Professional" />
+  <meta property="og:title" content="Jessica Adzoyi" />
   <meta property="og:description"
-    content="Professional Data Scientist specializing in business intelligence, statistical modeling, and strategic data analysis. Proven track record delivering actionable insights that drive business growth." />
-  <meta property="og:image" content="https://jessica-adzoyi.com/share-img.jpg" />
+    content="Follow Jessica's journey from Biochemistry graduate to aspiring Data Scientist. Currently learning at WorldQuant University and DataCamp, building skills in Python and Excel, with the dream of becoming a Senior Data Scientist." />
+  <meta property="og:image" content="https://jessicaadzoyi.dev/share-img.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Jessica Adzoyi - Professional Data Scientist Portfolio" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://jessica-adzoyi.com/" />
+  <meta property="og:url" content="https://jessicaadzoyi.dev/" />
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
   <script>
@@ -35,7 +35,7 @@
     gtag('js', new Date());
     gtag('config', 'G-E1XPQY97P2');
   </script>
-  <title>Jessica Adzoyi - Data Scientist & Analytics Professional</title>
+  <title>Jessica Adzoyi - Aspiring Data Scientist & Analytics Intern</title>
 
 </head>
 
