--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,22 @@
   <link href="https://fonts.googleapis.com/css2?family=NTR&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
 
-  <meta property="og:title" content="Jessica Adzoyi" />
+  <meta property="og:title" content="Jessica Adzoyi - Aspiring Data Scientist" />
   <meta property="og:description"
     content="Follow Jessica's journey from Biochemistry graduate to aspiring Data Scientist. Currently learning at WorldQuant University and DataCamp, building skills in Python and Excel, with the dream of becoming a Senior Data Scientist." />
   <meta property="og:image" content="https://jessicaadzoyi.dev/share-img.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Jessica Adzoyi - Professional Data Scientist Portfolio" />
+  <meta property="og:image:alt" content="Jessica Adzoyi - Aspiring Data Scientist Portfolio featuring orbital animations and learning journey" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jessicaadzoyi.dev/" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Jessica Adzoyi - Aspiring Data Scientist" />
+  <meta name="twitter:description" content="Follow Jessica's journey from Biochemistry graduate to aspiring Data Scientist. Currently learning at WorldQuant University and DataCamp." />
+  <meta name="twitter:image" content="https://jessicaadzoyi.dev/share-img.jpg" />
+  <meta name="twitter:image:alt" content="Jessica Adzoyi Portfolio Preview" />
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E1XPQY97P2"></script>
   <script>
@@ -35,7 +42,7 @@
     gtag('js', new Date());
     gtag('config', 'G-E1XPQY97P2');
   </script>
-  <title>Jessica Adzoyi - Aspiring Data Scientist & Analytics Intern</title>
+  <title>Jessica Adzoyi</title>
 
 </head>
 
