Update meta tags for improved SEO and social sharing

--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,16 @@
   <meta property="og:image" content="https://jessicaadzoyi.dev/share-img.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Jessica Adzoyi - Aspiring Data Scientist Portfolio featuring orbital animations and learning journey" />
+  <meta property="og:image:alt"
+    content="Jessica Adzoyi - Aspiring Data Scientist Portfolio featuring orbital animations and learning journey" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jessicaadzoyi.dev/" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Jessica Adzoyi - Aspiring Data Scientist" />
-  <meta name="twitter:description" content="Follow Jessica's journey from Biochemistry graduate to aspiring Data Scientist. Currently learning at WorldQuant University and DataCamp." />
+  <meta name="twitter:description"
+    content="Follow Jessica's journey from Biochemistry graduate to aspiring Data Scientist. Currently learning at WorldQuant University and DataCamp." />
   <meta name="twitter:image" content="https://jessicaadzoyi.dev/share-img.jpg" />
   <meta name="twitter:image:alt" content="Jessica Adzoyi Portfolio Preview" />
 
